--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </head>
 <body>
   <div class="container" id="captureArea">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Coat_of_arms_of_Iraq.svg/1200px-Coat_of_arms_of_Iraq.svg.png" alt="شعار العراق" width="60" style="float: left;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Coat_of_arms_of_Iraq.svg" alt="شعار العراق" width="60" style="float: left;">
     <h2>احتساب الترفيع للموظف العراقي</h2>
 
     <label for="employeeName">اسم الموظف:</label>
