--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>  احتساب الترفيع للموظف العراقي الموقع </title>
-    <title>  https://hussien-qais.github.io/t </title>
+  <title> https://hussien-qais.github.io/t احتساب الترفيع للموظف العراقي عبر الموقع </title>
   <style>
     body {
       font-family: 'Arial Black', Arial, sans-serif;
