--- a/index.html
+++ b/index.html
@@ -1,1 +1,441 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <title>احتساب ترفيع الموظف العراقي</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fefefe;
+      font-size: 12px;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: #fff;
+      padding: 10px;
+      border: 1px solid #ccc;
+    }
+    h2 {
+      text-align: center;
+      font-size: 16px;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+    label {
+      display: block;
+      margin-top: 4px;
+      font-size: 11px;
+    }
+    input, select {
+      width: 100%;
+      padding: 4px;
+      fontdirection: rtl;
+    }
+    #employeeName,
+    #grade,
+    #startDate {
+      text-align: right;
+    }
+    .flex-group {
+      display: flex;
+      gap: 6px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+      font-size: 11px;
+    }
+    th, td {
+      border: 1px solid #000;
+      padding: 6px;
+      text-align: center;
+    }
+    th {
+      background-color: #e9ecef;
+    }
+    .buttons {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .buttons button {
+      padding: 8px 15px;
+      font-size: 12px;
+      margin: 3px;
+      border: none;
+      background-color: #3498db;
+      color: #fff;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .buttons button:hover {
+      background-color: #2980b9;
+    }
+    .result {
+      background-color: #eafbea;
+      border: 1px solid #b6e7b6;
+      padding: 12px;
+      margin-top: 20px;
+      border-radius: 8px;
+      line-height: 1.7;
+      color: #000;
+    }
+    .pm-choice {
+      display: none;
+      margin-top: 10px;
+      text-align: center;
+    }
+    .pm-choice button {
+      padding: 6px 14px;
+      margin: 4px;
+      border: none;
+      border-radius: 6px;
+      background-color: #bdc3c7;
+      cursor: pointer;
+    }
+    .pm-choice button.active {
+      background-color: #27ae60;
+      color: #fff;
+    }
+    .pm-choice button.checked {
+      background-color: #27ae60;
+      color: #fff;
+    }
+    .designer {
+      text-align: center;
+      margin-top: 20px;
+      font-weight: bold;
+      color: #555;
+    }
+    @media print {
+  body {
+    background-color: #fff;
+    font-size: 12px;
+    font-family: 'Arial', sans-serif;
+    color: #000;
+    margin: 0;
+    padding: 0;
+  }
+  .container {
+    box-shadow: none;
+    padding: 5px;
+    margin: 0;
+    max-width: 100%;
+  }
+  label {
+    margin-top: 2px;
+    margin-bottom: 1px;
+  }
+  input, select {
+    padding: 3px;
+    font-size: 11px;
+    margin-top: 2px;
+    margin-bottom: 4px;
+  }
+  .flex-group {
+    gap: 4px;
+  }
+  table {
+    margin-top: 4px;
+    font-size: 9px;
+  }
+  th, td {
+    padding: 4px;
+  }
+  .result {
+    padding: 8px;
+    margin-top: 10px;
+    font-size: 11px;
+  }
+  .buttons,
+  .designer,
+  .footer {display;
+  }
+      input, select {
+        border: 1px solid #000 !important;
+        font-weight: bold;
+      }
+      #employeeName,
+      #grade,
+      #startDate {
+        text-align: right;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container" id="captureArea">
+    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px;">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Coat_of_arms_of_Iraq.svg" alt="شعار العراق" width="60">
+  <h2 style="flex: 1; text-align: center; margin: 0;">موقع احتساب الترفيع للموظف العراقي تلقائياً</h2>
+<h2 style="text-align: center; font-size: 20px; font-weight: bold; margin-bottom: 5px;">
+</h2>
+<div style="text-align: center; font-size: 10px; font-weight: bold; color: #555; margin-bottom: 10px;">
+  امسح الباركود للدخول للموقع الالكتروني
+</div>
+  <img src="https://raw.githubusercontent.com/Hussien-qais/t/main/websiteplanet-qr.png" alt="QR Code" width="90">
+</div>
+    <label for="employeeName">اسم الموظف:</label>
+    <input type="text" id="employeeName" oninput="enableFields()" placeholder="أدخل اسم الموظف" />
 
+    <label for="grade">الدرجة الحالية:</label>
+    <select id="grade" onchange="setYearsByGrade()" disabled>
+      <option value="">-- اختر الدرجة --</option>
+      <option value="10">العاشرة</option>
+      <option value="9">التاسعة</option>
+      <option value="8">الثامنة</option>
+      <option value="7">السابعة</option>
+      <option value="6">السادسة</option>
+      <option value="5">الخامسة</option>
+      <option value="4">الرابعة</option>
+      <option value="3">الثالثة</option>
+      <option value="2">الثانية</option>
+      <option value="1">الأولى</option>
+    </select>
+
+    <label for="startDate">تاريخ المباشرة في الدرجة:</label>
+    <input type="date" id="startDate" onchange="generateYearInputs()" disabled />
+
+    <label for="years">عدد سنوات الدرجة:</label>
+    <input type="number" id="years" readonly disabled />
+
+    <label>الخدمة المدورة:</label>
+    <div class="flex-group">
+      <input type="number" id="rolloverYears" placeholder="سنوات" disabled />
+      <input type="number" id="rolloverMonths" placeholder="أشهر" disabled />
+      <input type="number" id="rolloverDays" placeholder="أيام" disabled />
+    </div>
+
+    <div id="yearInputs"></div>
+
+    <div class="pm-choice" id="pmChoiceContainer">
+      <label>هل دائرتك تحتسب كتابين شكر وتقدير من رئيس الوزراء في السنة؟</label><br>
+      <button onclick="selectPMRule(true)" id="pmYes">نعم دائرتي تحتسب كتابين شكر من رئيس الوزراء خلال السنة</button>
+      <button onclick="selectPMRule(false)" id="pmNo">كلا دائرتي تحتسب كتاب شكر وتقدير واحد فقط من رئيس الوزراء خلال السنة</button>
+    </div>
+
+    <div class="buttons">
+      <button onclick="calculatePromotion()">احسب الترفيع</button>
+      <button onclick="window.print()">طباعة</button>
+      <button onclick="downloadPDF()">حفظ كـ PDF</button>
+      <button onclick="downloadImage()">تحميل كصورة</button>
+    </div>
+
+    <div class="result" id="result"></div>
+
+  </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script>
+function downloadPDF() {
+  const element = document.getElementById("captureArea");
+  const opt = {
+    margin: [0.2, 0.2, 0.2, 0.2],
+    filename: 'احتساب_الترفيع.pdf',
+    image: { type: 'jpeg', quality: 0.98 },
+    html2canvas: {
+      scale: 2,
+      useCORS: true,
+      scrollY: 0
+    },
+    jsPDF: {
+      unit: 'in',
+      format: 'a4',
+      orientation: 'portrait'
+    },
+    pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
+  };
+  html2pdf().set(opt).from(element).save();
+}
+</script>
+ <script>
+  let pmRuleSelected = null;
+
+  function enableFields() {
+    const name = document.getElementById("employeeName").value;
+    const fields = ["grade", "startDate", "years", "rolloverYears", "rolloverMonths", "rolloverDays"];
+    fields.forEach(id => document.getElementById(id).disabled = !name);
+  }
+
+  function selectPMRule(value) {
+    pmRuleSelected = value;
+
+    const yesBtn = document.getElementById("pmYes");
+    const noBtn = document.getElementById("pmNo");
+
+    if (value) {
+      yesBtn.innerHTML = "✓ نعم دائرتي تحتسب كتابين شكر وتقدير من رئيس الوزراء خلال السنة مع كتاب اخر من المدير العام او المحافظ او الوزير ";
+      noBtn.innerHTML = "اضغط هنا لتغيير الاختيار";
+    } else {
+      yesBtn.innerHTML = "اضغط هنا لتغيير الاختيار";
+      noBtn.innerHTML = "✓  كلا دائرتي تحتسب كتاب شكر وتقدير واحد فقط من رئيس الوزراء خلال السنة مع ثلاث كتب من المدير العام او المحافظ او الوزير لكون كتاب رئيس الوزراء يعتبر استثناء";
+    }
+
+    yesBtn.classList.toggle("active", value);
+    noBtn.classList.toggle("active", !value);
+  }
+
+  function setYearsByGrade() {
+    const grade = parseInt(document.getElementById("grade").value);
+    const years = grade === 10 || grade >= 6 ? 4 : 5;
+    document.getElementById("years").value = years;
+    generateYearInputs();
+  }
+
+  function generateYearInputs() {
+    const years = parseInt(document.getElementById("years").value);
+    const start = document.getElementById("startDate").value;
+    if (!start || isNaN(years)) return;
+
+    const startDate = new Date(start);
+    const container = document.getElementById("yearInputs");
+    container.innerHTML = "";
+
+    let table = `<table><thead><tr>
+      <th>السنة</th>
+      <th>شكر المدير</th>
+      <th>شكر الوزير</th>
+      <th>رئيس الوزراء</th>
+      <th>لفت نظر</th>
+      <th>إنذار</th>
+      <th>توبيخ</th>
+    </tr></thead><tbody>`;
+
+    for (let i = 0; i < years; i++) {
+      const year = startDate.getFullYear() + i;
+      table += `<tr>
+        <td>${year}</td>
+        <td><input type="number" min="0" max="3" id="uni_${i}"></td>
+        <td><input type="number" min="0" max="3" id="minister_${i}"></td>
+        <td><input type="number" min="0" max="3" id="pm_${i}" oninput="checkPMInputs()"></td>
+        <td><select id="warn_${i}"><option>لا</option><option>نعم</option></select></td>
+        <td><select id="alert_${i}"><option>لا</option><option>نعم</option></select></td>
+        <td><select id="blame_${i}"><option>لا</option><option>نعم</option></select></td>
+      </tr>`;
+    }
+
+    table += "</tbody></table>";
+    container.innerHTML = table;
+  }
+
+  function checkPMInputs() {
+    const years = parseInt(document.getElementById("years").value);
+    for (let i = 0; i < years; i++) {
+      if ((parseInt(document.getElementById(`pm_${i}`).value) || 0) > 0) {
+        document.getElementById("pmChoiceContainer").style.display = "block";
+        return;
+      }
+    }
+    document.getElementById("pmChoiceContainer").style.display = "none";
+  }
+
+  function calculatePromotion() {
+    if (document.getElementById("pmChoiceContainer").style.display === "block" && pmRuleSelected === null) {
+      alert("يرجى اختيار سياسة احتساب كتب رئيس الوزراء");
+      return;
+    }
+
+    const years = parseInt(document.getElementById("years").value);
+    const start = new Date(document.getElementById("startDate").value);
+    const grade = parseInt(document.getElementById("grade").value);
+    const requiredYears = grade === 10 || grade >= 6 ? 4 : 5;
+    const originalPromotion = new Date(start);
+    originalPromotion.setFullYear(originalPromotion.getFullYear() + requiredYears);
+
+    let totalMonths = 0;
+    let delayMonths = 0;
+    let pmUsedYears = new Set();
+
+    for (let i = 0; i < years; i++) {
+      let uni = Math.min(parseInt(document.getElementById(`uni_${i}`).value) || 0, 3);
+      let min = Math.min(parseInt(document.getElementById(`minister_${i}`).value) || 0, 3);
+      let pm = parseInt(document.getElementById(`pm_${i}`).value) || 0;
+      const year = start.getFullYear() + i;
+
+      if (pm > 0 && !pmUsedYears.has(year)) {
+        totalMonths += pmRuleSelected ? Math.min(pm, 2) * 6 : 6;
+        pmUsedYears.add(year);
+      }
+
+      totalMonths += pmRuleSelected ? Math.min(uni + min, 1) : Math.min(uni + min, 3);
+
+      const warn = document.getElementById(`warn_${i}`).value === "نعم" ? 3 : 0;
+      const alert = document.getElementById(`alert_${i}`).value === "نعم" ? 6 : 0;
+      const blame = document.getElementById(`blame_${i}`).value === "نعم" ? 12 : 0;
+      delayMonths += Math.max(warn, alert, blame);
+    }
+
+    let rY = parseInt(document.getElementById("rolloverYears").value) || 0;
+    let rM = parseInt(document.getElementById("rolloverMonths").value) || 0;
+    let rD = parseInt(document.getElementById("rolloverDays").value) || 0;
+
+    let totalDays = rY * 365 + rM * 30 + rD;
+    let rolloverMonths = Math.floor(totalDays / 30);
+    let rolloverDays = totalDays % 30;
+
+    let finalDate = new Date(originalPromotion);
+    finalDate.setMonth(finalDate.getMonth() - totalMonths - rolloverMonths + delayMonths);
+    finalDate.setDate(finalDate.getDate() - rolloverDays);
+
+    let resultHTML = `<strong>تاريخ الترفيع الأصلي:</strong> ${originalPromotion.toLocaleDateString("ar-EG")}<br>
+      <strong>تاريخ الترفيع المستحق:</strong> ${finalDate.toLocaleDateString("ar-EG")}<br>
+      <strong>القدم من كتب الشكر:</strong> ${totalMonths} شهر<br>`;
+
+    if (totalDays > 0)
+      resultHTML += `<strong>الخدمة المدورة:</strong> ${rY} سنة و${rM} شهر و${rD} يوم<br>`;
+    if (delayMonths > 0)
+      resultHTML += `<strong>مدة تأخير العقوبة:</strong> ${delayMonths} شهر`;
+
+    document.getElementById("result").innerHTML = resultHTML;
+  }
+
+  function downloadPDF() {
+  const element = document.getElementById("captureArea");
+  const opt = {
+    margin: [0.0, 0.0, 0.0, 0.0], // هوامش صغيرة لاحتواء المحتوى الكامل
+    filename: 'احتساب_الترفيع.pdf',
+    image: { type: 'jpeg', quality: 1 },
+    html2canvas: {
+      scale: 4, // جودة عالية
+      useCORS: true,
+      scrollY: 0,
+      logging: false,
+      allowTaint: true
+    },
+    jsPDF: {
+      unit: 'mm',
+      format: 'a4',
+      orientation: 'portrait'
+    },
+    pagebreak: {
+      mode: ['avoid-all', 'css', 'legacy'],
+      before: '#pageBreak', // إذا كنت تستخدم فاصل صفحة
+      after: [],
+      avoid: ['.no-break'] // امنع التقسيم داخل هذه العناصر
+    }
+  };
+
+  html2pdf().set(opt).from(element).save();
+}
+  // لإضافة التاريخ الحالي في الفوتر
+  document.getElementById("currentYear").textContent = new Date().getFullYear();
+
+function downloadImage() {
+  const element = document.getElementById("captureArea");
+  html2canvas(element, {
+    scale: 4, // زيادة الدقة
+    useCORS: true,
+    scrollY: -window.scrollY
+  }).then(canvas => {
+    const imgData = canvas.toDataURL("image/jpeg", 1.0);
+    const link = document.createElement("a");
+    link.href = imgData;
+    link.download = "احتساب_الترفيع.jpg";
+    link.click();
+  });
+}
+</script>
