--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <body>
   <div class="container" id="captureArea">
     <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px;">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Coat_of_arms_of_Iraq.svg" alt="شعار العراق" width="60">
+  <img src="https://raw.githubusercontent.com/Hussien-qais/t/refs/heads/main/Coat_of_arms_of_Iraq.png" alt="شعار العراق" width="60">
   <h2 style="flex: 1; text-align: center; margin: 0;">موقع احتساب الترفيع للموظف العراقي تلقائياً</h2>
 <h2 style="text-align: center; font-size: 20px; font-weight: bold; margin-bottom: 5px;">
 </h2>
