--- a/index.html
+++ b/index.html
@@ -1,6 +1,73 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <style>
+  @media print {
+    .no-print {
+      display: none !important;
+    }
+  }
+</style>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  * {
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+    color: #333;
+  }
+
+  .container {
+    max-width: 700px;
+    margin: auto;
+    padding: 20px;
+  }
+
+  input, select, button, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 12px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+  }
+
+  button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #0056b3;
+  }
+
+  h1, h2, h3 {
+    text-align: center;
+    margin-top: 0;
+  }
+
+  @media (max-width: 768px) {
+    body {
+      padding: 10px;
+    }
+
+    .container {
+      padding: 15px;
+    }
+
+    input, select, button, textarea {
+      font-size: 0.95rem;
+      padding: 8px;
+    }
+  }
+</style>
   <meta charset="UTF-8">
   <title>احتساب الترفيع - النسخة الذهبية</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -219,9 +286,10 @@
     </div>
 
     <div class="buttons">
-      <button onclick="calculatePromotion()">احسب الترفيع</button>
-      <button onclick="window.print()">طباعة</button>
-      <button onclick="downloadImage()">تحميل كصورة</button>
+     <button onclick="calculatePromotion()" class="no-print">احتساب الترفيع</button>
+<button onclick="window.print()" class="no-print">طباعة</button>
+<button onclick="downloadPDF()" class="no-print">حفظ كـ PDF</button>
+<button onclick="downloadImage()" class="no-print">حفظ كصورة</button>
     </div>
 
     <div class="result" id="result"></div>
@@ -267,11 +335,11 @@ function downloadPDF() {
     const noBtn = document.getElementById("pmNo");
 
     if (value) {
-      yesBtn.innerHTML = "✓ نعم دائرتي تحتسب كتابين شكر وتقدير من رئيس الوزراء خلال السنة مع كتاب اخر من المدير العام او المحافظ او الوزير ";
+      yesBtn.innerHTML = "? نعم دائرتي تحتسب كتابين شكر وتقدير من رئيس الوزراء خلال السنة مع كتاب اخر من المدير العام او المحافظ او الوزير ";
       noBtn.innerHTML = "اضغط هنا لتغيير الاختيار";
     } else {
       yesBtn.innerHTML = "اضغط هنا لتغيير الاختيار";
-      noBtn.innerHTML = "✓  كلا دائرتي تحتسب كتاب شكر وتقدير واحد فقط من رئيس الوزراء خلال السنة مع ثلاث كتب من المدير العام او المحافظ او الوزير لكون كتاب رئيس الوزراء يعتبر استثناء";
+      noBtn.innerHTML = "?  كلا دائرتي تحتسب كتاب شكر وتقدير واحد فقط من رئيس الوزراء خلال السنة مع ثلاث كتب من المدير العام او المحافظ او الوزير لكون كتاب رئيس الوزراء يعتبر استثناء";
     }
 
     yesBtn.classList.toggle("active", value);
@@ -395,7 +463,7 @@ function downloadPDF() {
   function downloadPDF() {
   const element = document.getElementById("captureArea");
   const opt = {
-    margin: [0.1, 0.1, 0.1, 0.5], // هوامش صغيرة لاحتواء المحتوى الكامل
+    margin: [0.5, 0.5, 0.5, 0.5], // هوامش صغيرة لاحتواء المحتوى الكامل
     filename: 'احتساب_الترفيع.pdf',
     image: { type: 'jpeg', quality: 1 },
     html2canvas: {
