--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <div class="buttons">
      <button onclick="calculatePromotion()" class="no-print">احتساب الترفيع</button>
 <button onclick="window.print()" class="no-print">طباعة</button>
-<button onclick="downloadImage()" class="no-print">حفظ كصورة</button>
+<button onclick="downloadImage()" class="no-print">تنزيل</button>
     </div>
 
     <div class="result" id="result"></div>
