--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   @media print {
     .no-print {
       display: none !important;
-    }
-    <style>
+    
   * {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
@@ -293,7 +292,6 @@
     <div class="result" id="result"></div>
 
   </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script>
 function downloadPDF() {
@@ -502,66 +500,6 @@ function downloadImage() {
     link.download = "احتساب_الترفيع.jpg";
     link.click();
   });
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <title>عرض سجل العمليات</title>
-</head>
-<body>
-  <h2>سجل العمليات</h2>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>الاسم</th>
-        <th>العملية</th>
-        <th>التاريخ والوقت</th>
-        <th>الموقع</th>
-      </tr>
-    </thead>
-    <tbody id="dataBody">
-      <!-- هنا ستعرض البيانات -->
-    </tbody>
-  </table>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyBIzTtcXKcZx4tLTYk4e-rgdPa5XfQ6ejQ",
-      authDomain: "tarfieh.firebaseapp.com",
-      databaseURL: "https://tarfieh-default-rtdb.firebaseio.com",
-      projectId: "tarfieh",
-      storageBucket: "tarfieh.firebasestorage.app",
-      messagingSenderId: "537704810851",
-      appId: "1:537704810851:web:e48225d8b90b20599aab56",
-      measurementId: "G-T81YPB61PY"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    const dataRef = ref(db, 'operations');
-    const tableBody = document.getElementById("dataBody");
-
-    onValue(dataRef, (snapshot) => {
-      tableBody.innerHTML = '';
-      const data = snapshot.val();
-      if (data) {
-        Object.values(data).forEach(entry => {
-          const row = `
-            <tr>
-              <td>${entry.name || ''}</td>
-              <td>${entry.action || ''}</td>
-              <td>${entry.date || ''}</td>
-              <td>${entry.location || ''}</td>
-            </tr>
-          `;
-          tableBody.innerHTML += row;
-        });
-      }
-    });
   </script>
 </body>
-</html>
+<html>
