--- a/index.html
+++ b/index.html
@@ -50,7 +50,19 @@
     margin-top: 0;
   }
 
- 
+  @media (max-width: 768px) {
+    body {
+      padding: 10px;
+    }
+
+    .container {
+      padding: 15px;
+    }
+
+    input, select, button, textarea {
+      font-size: 0.95rem;
+      padding: 8px;
+    }
   }
 </style>
   <meta charset="UTF-8">
