--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     .no-print {
       display: none !important;
     }
-  }
- {
+    <style>
+  * {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
   }
@@ -48,21 +48,7 @@
   h1, h2, h3 {
     text-align: center;
     margin-top: 0;
-  }
-
-  @media (max-width: 768px) {
-    body {
-      padding: 10px;
-    }
-
-    .container {
-      padding: 15px;
-    }
-
-    input, select, button, textarea {
-      font-size: 0.95rem;
-      padding: 8px;
-    }
+  
   }
 </style>
   <meta charset="UTF-8">
@@ -72,7 +58,7 @@
     body {
       font-family: Arial, sans-serif;
       background: #fefefe;
-      font-size: 16px;
+      font-size: 12px;
       margin: 0;
       padding: 0;
     }
@@ -178,7 +164,7 @@
     @media print {
   body {
     background-color: #fff;
-    font-size: 20px;
+    font-size: 12px;
     font-family: 'Arial', sans-serif;
     color: #000;
     margin: 0;
@@ -232,10 +218,9 @@
   </style>
 </head>
 <body>
-<div style="font-size: 16px; font-weight: bold; color: #000; font-family: Arial, sans-serif;">
   <div class="container" id="captureArea">
     <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px;">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Coat_of_arms_of_Iraq.svg" alt="شعار العراق" width="60">
+  <img src="https://raw.githubusercontent.com/Hussien-qais/t/refs/heads/main/Coat_of_arms_of_Iraq.png" alt="شعار العراق" width="60">
   <h2 style="flex: 1; text-align: center; margin: 0;">احتساب الترفيع للموظف العراقي</h2>
 <h2 style="text-align: center; font-size: 20px; font-weight: bold; margin-bottom: 5px;">
 </h2>
@@ -286,7 +271,7 @@
     <div class="buttons">
      <button onclick="calculatePromotion()" class="no-print">احتساب الترفيع</button>
 <button onclick="window.print()" class="no-print">طباعة</button>
-<button onclick="downloadImage()" class="no-print">حفظ كصورة</button>
+<button onclick="downloadImage()" class="no-print">تنزيل</button>
     </div>
 
     <div class="result" id="result"></div>
@@ -332,11 +317,11 @@ function downloadPDF() {
     const noBtn = document.getElementById("pmNo");
 
     if (value) {
-      yesBtn.innerHTML = "✓ نعم دائرتي تحتسب كتابين شكر وتقدير من رئيس الوزراء خلال السنة مع كتاب اخر من المدير العام او المحافظ او الوزير ";
+      yesBtn.innerHTML = "? نعم دائرتي تحتسب كتابين شكر وتقدير من رئيس الوزراء خلال السنة مع كتاب اخر من المدير العام او المحافظ او الوزير ";
       noBtn.innerHTML = "اضغط هنا لتغيير الاختيار";
     } else {
       yesBtn.innerHTML = "اضغط هنا لتغيير الاختيار";
-      noBtn.innerHTML = "✓  كلا دائرتي تحتسب كتاب شكر وتقدير واحد فقط من رئيس الوزراء خلال السنة مع ثلاث كتب من المدير العام او المحافظ او الوزير لكون كتاب رئيس الوزراء يعتبر استثناء";
+      noBtn.innerHTML = "?  كلا دائرتي تحتسب كتاب شكر وتقدير واحد فقط من رئيس الوزراء خلال السنة مع ثلاث كتب من المدير العام او المحافظ او الوزير لكون كتاب رئيس الوزراء يعتبر استثناء";
     }
 
     yesBtn.classList.toggle("active", value);
@@ -460,7 +445,7 @@ function downloadPDF() {
   function downloadPDF() {
   const element = document.getElementById("captureArea");
   const opt = {
-    margin: [0.1, 0.1, 0.1, 0.5], // هوامش صغيرة لاحتواء المحتوى الكامل
+    margin: [0.5, 0.5, 0.5, 0.5], // هوامش صغيرة لاحتواء المحتوى الكامل
     filename: 'احتساب_الترفيع.pdf',
     image: { type: 'jpeg', quality: 1 },
     html2canvas: {
