--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     .no-print {
       display: none !important;
     }
-    <style>
-  * {
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    }
     box-sizing: border-box;
     font-family: Arial, sans-serif;
   }
