--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
   <style>
   @media print {
     .no-print {
       display: none !important;
     }
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    }
+    <style>
+  * {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
   }
