--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
+ <meta name="google-site-verification" content="XgxpwIng6paMy7bfa5w0P1Nfb9gl4AD9o7gTMJaYWeg" />
   <style>
   #captureArea {
   width: 100%;
