--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 <meta name="google-site-verification" content="XgxpwIng6paMy7bfa5w0P1Nfb9gl4AD9o7gTMJaYWeg" />
+ <head>
   #captureArea {
   width: 100%;
   max-width: 1800mm;
