--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<meta name="google-site-verification" content="XgxpwIng6paMy7bfa5w0P1Nfb9gl4AD9o7gTMJaYWeg" />}
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-<meta name="google-site-verification" content="XgxpwIng6paMy7bfa5w0P1Nfb9gl4AD9o7gTMJaYWeg" />
- <head>
+  <style>
   #captureArea {
   width: 100%;
   max-width: 1800mm;
