--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ table td select {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
   }
-
+<meta name="google-site-verification" content="XgxpwIng6paMy7bfa5w0P1Nfb9gl4AD9o7gTMJaYWeg" />}
   body {
     margin: 0;
     padding: 0;
