--- a/index.html
+++ b/index.html
@@ -543,20 +543,13 @@ function downloadPDF() {
     buttons.forEach(btn => btn.style.display = "inline-block");
   });
 }
-function requestStoragePermission() {
-    // تحقق من دعم المتصفح لمقدرة صلاحية التخزين
-    if (navigator.permissions) {
-        navigator.permissions.query({ name: 'storage' }).then(function(permissionStatus) {
-            if (permissionStatus.state === 'granted') {
-                console.log('تم منح صلاحية التخزين');
-                // يمكن تنفيذ الوظيفة التي تحتاج إلى صلاحية التخزين هنا
-            } else {
-                alert('الرجاء منح صلاحية التخزين لتحميل الملفات.');
-                // يمكن هنا تقديم طلب للمتصفح أو التطبيق للمستخدم لتحويله إلى الإعدادات
-            }
-        });
-    } else {
-        alert('صلاحية التخزين غير مدعومة في متصفحك.');
-    }
-}
   </script>
+<footer style="text-align: center; margin-top: 50px; font-size: 14px;">
+  <div id="sfcl5lf9gfcydaskmpubs8sbeg22bnyg6zm"></div>
+  <script type="text/javascript" src="https://counter2.optistats.ovh/private/counter.js?c=l5lf9gfcydaskmpubs8sbeg22bnyg6zm&down=async" async></script>
+  <noscript>
+    <a href="https://www.freecounterstat.com" title="web page counter">
+      <img src="https://counter2.optistats.ovh/private/freecounterstat.php?c=l5lf9gfcydaskmpubs8sbeg22bnyg6zm" border="0" title="web page counter" alt="web page counter">
+    </a>
+  </noscript>
+</footer>
