--- a/index.html
+++ b/index.html
@@ -549,8 +549,12 @@ function downloadPDF() {
   });
 }
   </script>
-<footer class="hide-on-pdf" style="text-align: center; margin-top: 50px;">
-  <a href="https://www.freecounterstat.com" title="web page counter">
-    <img src="https://counter2.optistats.ovh/private/freecounterstat.php?c=l5lf9gfcydaskmpubs8sbeg22bnyg6zm" border="0" title="web page counter" alt="web page counter">
-  </a>
+<footer style="text-align: center; margin-top: 50px; font-size: 14px;">
+  <div id="sfcl5lf9gfcydaskmpubs8sbeg22bnyg6zm"></div>
+  <script type="text/javascript" src="https://counter2.optistats.ovh/private/counter.js?c=l5lf9gfcydaskmpubs8sbeg22bnyg6zm&down=async" async></script>
+  <noscript>
+    <a href="https://www.freecounterstat.com" title="web page counter">
+      <img src="https://counter2.optistats.ovh/private/freecounterstat.php?c=l5lf9gfcydaskmpubs8sbeg22bnyg6zm" border="0" title="web page counter" alt="web page counter">
+    </a>
+  </noscript>
 </footer>
