--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ table td select {
 <div style="text-align: center;">
   <div id="barcode"></div>
 </div>
-  <img src="https://raw.githubusercontent.com/Hussien-qais/t/main/websiteplanet-qr.png" alt="QR Code" width="90">
+  <img src="https://raw.githubusercontent.com/Hussien-qais/t/refs/heads/main/1745023974536.jpg" alt="QR Code" width="90">
 </div>
     <label for="employeeName">اسم الموظف:</label>
     <input type="text" id="employeeName" oninput="enableFields()" placeholder="  أدخل اسم الموظف  " />
@@ -334,7 +334,7 @@ table td select {
 
 <div class="footer" style="text-align: center; margin-top: 20px; font-weight: bold;font-size: 12px;">
   <span>رابط الموقع الالكتروني الخاص باحتساب الترفيع أو يمكنك مسح الباركود أعلاه للدخول للموقع مباشرة</span>
-<div dir="ltr" style="unicode-bidi: embed; margin-top: 4px;">https://hussien-qais.github.io/t/</div>
+<div dir="ltr" style="unicode-bidi: embed; margin-top: 4px;">https://sites.google.com/view/tecli</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
 function downloadPDF() {
