--- a/index.html
+++ b/index.html
@@ -275,6 +275,73 @@ table td select {
 }
   </style>
 </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>احتساب الترفيع للموظف العراقي | نظام ذكي لحساب الخدمة</title>
+  
+  <meta name="description" content="احسب ترفيعك بدقة مع موقع احتساب الترفيع للموظف العراقي. يشمل كتب الشكر، العقوبات، الخدمة المدورة، والدرجة الوظيفية. أداة ذكية وسهلة لجميع موظفي الدولة.">
+  
+  <meta name="keywords" content="
+    احتساب الترفيع,
+    ترفيع الموظف العراقي,
+    حساب قدم الموظف,
+    كتب الشكر والتقدير,
+    عقوبات الموظف,
+    الخدمة المدورة,
+    نظام الخدمة المدنية العراق,
+    برنامج ترفيع الموظفين,
+    درجة الموظف,
+    المرحلة الوظيفية,
+    تاريخ الترفيع,
+    الترفيع الوظيفي,
+    احتساب الخدمة,
+    ترقية الموظفين العراق,
+    كتب شكر رئيس الوزراء,
+    موظف حكومي عراقي,
+    الترفيع حسب القانون,
+    وزارة المالية العراق,
+    ترفيع حسب الشكر,
+    ترفيع حسب العقوبة,
+    جدول الترفيع,
+    استحقاق الترفيع,
+    شكر وتقدير الموظف,
+    احتساب ترفيع الموظف العراقي,
+    خدمة الموظف,
+    تطبيق الترفيع,
+    موقع الترفيع العراقي,
+    استحقاق الدرجة الوظيفية,
+    كتب التقدير الوظيفي,
+    خدمة الموظف الحكومي,
+    ترفيع الموظفين الحكوميين,
+    عقوبات الموظفين,
+    ترفيع موظفي الدولة العراقية,
+    حساب الترفيع الحكومي,
+    تحديد الترفيع للموظف,
+    الترفيع الفوري للموظف,
+    كيفية حساب الترفيع,
+    الشهادات التقديرية,
+    خدمة الموظفين المدنيين,
+    حلول ترفيع الموظفين,
+    استحقاق الترقية للموظف العراقي,
+    سياسة الترفيع الحكومية,
+    حساب العلاوات والتقديرات,
+    درجة الموظف العراق,
+    نتائج الترفيع الوظيفي,
+    كيفية تحسين الترفيع الوظيفي,
+    برنامج تحسين الترفيع الوظيفي,
+    حساب الترفيع الإلكتروني,
+    تطوير نظام الترفيع العراقي,
+    موقع حساب الترفيع العراقي
+  ">
+
+  <!-- مشاركة على فيسبوك وتويتر بدون صورة -->
+  <meta property="og:title" content="احتساب الترفيع للموظف العراقي">
+  <meta property="og:description" content="أحسب ترفيعك الوظيفي بسهولة ودقة حسب كتب الشكر والخدمة المدورة والعقوبات.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://sites.google.com/view/tecli?usp=sharing">
+
+  <meta name="twitter:card" content="summary">
 <body>
   <div class="container" id="captureArea">
     <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px;">
